--- a/src/components/CharacterCard/CharacterCard.module.css
+++ b/src/components/CharacterCard/CharacterCard.module.css
@@ -8,6 +8,11 @@
   color: rgb(98, 98, 98);
 }
 
+.character_img {
+  width: 100%;
+  margin-bottom: 5px;
+}
+
 @media screen and (min-width: 768px) {
   .character_item {
     width: calc(50% - 10px);
