--- a/src/pages/MainPage/MainPage.module.css
+++ b/src/pages/MainPage/MainPage.module.css
@@ -11,7 +11,7 @@
 }
 
 .load_btn {
-align-items: center;
+  align-items: center;
   background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
   border: 0;
   border-radius: 8px;
@@ -62,6 +62,7 @@ align-items: center;
   .characters_list {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     row-gap: 10px;
     column-gap: 10px;
   }
