--- a/src/pages/CharacterPage/CharacterPage.module.css
+++ b/src/pages/CharacterPage/CharacterPage.module.css
@@ -2,3 +2,11 @@
   height: 100vh;
   /* width: 100%; */
 }
+
+.loading_container {
+  position: absolute;
+  z-index: 1000;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 50%);
+}
